--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,4 +27,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Generate README.md
-        run: ./autogenerate_readme.sh
+        run: chmod +x ./autogenerate_readme.sh && ./autogenerate_readme.sh
